src/grammar/ABCMusicParser.java
// Generated from ABCMusic.g4 by ANTLR 4.0

package grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ABCMusicParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__85=1, T__84=2, T__83=3, T__82=4, T__81=5, T__80=6, T__79=7, T__78=8, 
		T__77=9, T__76=10, T__75=11, T__74=12, T__73=13, T__72=14, T__71=15, T__70=16, 
		T__69=17, T__68=18, T__67=19, T__66=20, T__65=21, T__64=22, T__63=23, 
		T__62=24, T__61=25, T__60=26, T__59=27, T__58=28, T__57=29, T__56=30, 
		T__55=31, T__54=32, T__53=33, T__52=34, T__51=35, T__50=36, T__49=37, 
		T__48=38, T__47=39, T__46=40, T__45=41, T__44=42, T__43=43, T__42=44, 
		T__41=45, T__40=46, T__39=47, T__38=48, T__37=49, T__36=50, T__35=51, 
		T__34=52, T__33=53, T__32=54, T__31=55, T__30=56, T__29=57, T__28=58, 
		T__27=59, T__26=60, T__25=61, T__24=62, T__23=63, T__22=64, T__21=65, 
		T__20=66, T__19=67, T__18=68, T__17=69, T__16=70, T__15=71, T__14=72, 
		T__13=73, T__12=74, T__11=75, T__10=76, T__9=77, T__8=78, T__7=79, T__6=80, 
		T__5=81, T__4=82, T__3=83, T__2=84, T__1=85, T__0=86, WHITESPACE=87, LINEFEED=88;
	public static final String[] tokenNames = {
		"<INVALID>", "'E'", "'u'", "'*'", "'['", "'8'", "'A'", "'W'", "'d'", "'q'", 
		"'N'", "'w:'", "'4'", "'O'", "'l'", "'y'", "'I'", "'h'", "'S'", "'\"'", 
		"'0'", "'M'", "'%'", "')'", "'D'", "'_'", "'9'", "'t'", "'c'", "'X'", 
		"'p'", "'='", "'x'", "'5'", "'k'", "'H'", "'\\'", "'P'", "'1'", "'|'", 
		"'T'", "'!'", "'g'", "'L'", "'b'", "']'", "'C'", "','", "'-'", "':'", 
		"'('", "'o'", "'s'", "'w'", "'Y'", "'f'", "'6'", "'?'", "'''", "'2'", 
		"'G'", "'Q'", "'n'", "'K'", "'j'", "'U'", "'7'", "'v'", "'^'", "'a'", 
		"'.'", "'B'", "'r'", "';'", "'e'", "'Z'", "'m'", "'R'", "'z'", "'3'", 
		"'F'", "'V'", "'i'", "'/'", "'~'", "'#'", "'J'", "WHITESPACE", "LINEFEED"
	};
	public static final int
		RULE_abctune = 0, RULE_abcheader = 1, RULE_otherfields = 2, RULE_fieldnumber = 3, 
		RULE_songnumber = 4, RULE_fieldtitle = 5, RULE_title = 6, RULE_fieldcomposer = 7, 
		RULE_composer = 8, RULE_fielddefaultlength = 9, RULE_defaultlength = 10, 
		RULE_fieldmeter = 11, RULE_meter = 12, RULE_fieldtempo = 13, RULE_tempo = 14, 
		RULE_fieldvoice = 15, RULE_voice = 16, RULE_fieldkey = 17, RULE_key = 18, 
		RULE_keyaccidental = 19, RULE_modeminor = 20, RULE_abcmusic = 21, RULE_abcline = 22, 
		RULE_notesline = 23, RULE_element = 24, RULE_pitch = 25, RULE_octave = 26, 
		RULE_accidental = 27, RULE_rest = 28, RULE_multinote = 29, RULE_notelength = 30, 
		RULE_notelengthfull = 31, RULE_notelengthmultiply = 32, RULE_notelengthnumerator = 33, 
		RULE_notelengthdenominator = 34, RULE_notelengthhalf = 35, RULE_tuplet = 36, 
		RULE_duplet = 37, RULE_triplet = 38, RULE_quadruplet = 39, RULE_tupletnote = 40, 
		RULE_barline = 41, RULE_midtunefield = 42, RULE_lyric = 43, RULE_lyricunderscore = 44, 
		RULE_lyricstar = 45, RULE_lyricbar = 46, RULE_lyricword = 47, RULE_comment = 48, 
		RULE_endofline = 49, RULE_commenttext = 50, RULE_text = 51, RULE_space = 52, 
		RULE_basenote = 53, RULE_character = 54, RULE_punctuation = 55, RULE_digit = 56, 
		RULE_number = 57;
	public static final String[] ruleNames = {
		"abctune", "abcheader", "otherfields", "fieldnumber", "songnumber", "fieldtitle", 
		"title", "fieldcomposer", "composer", "fielddefaultlength", "defaultlength", 
		"fieldmeter", "meter", "fieldtempo", "tempo", "fieldvoice", "voice", "fieldkey", 
		"key", "keyaccidental", "modeminor", "abcmusic", "abcline", "notesline", 
		"element", "pitch", "octave", "accidental", "rest", "multinote", "notelength", 
		"notelengthfull", "notelengthmultiply", "notelengthnumerator", "notelengthdenominator", 
		"notelengthhalf", "tuplet", "duplet", "triplet", "quadruplet", "tupletnote", 
		"barline", "midtunefield", "lyric", "lyricunderscore", "lyricstar", "lyricbar", 
		"lyricword", "comment", "endofline", "commenttext", "text", "space", "basenote", 
		"character", "punctuation", "digit", "number"
	};

	@Override
	public String getGrammarFileName() { return "ABCMusic.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    // This method makes the lexer or parser stop running if it encounters
	    // invalid input and throw a RuntimeException.
	    public void reportErrorsAsExceptions() {
	        removeErrorListeners();
	        addErrorListener(new ExceptionThrowingErrorListener());
	    }

	    private static class ExceptionThrowingErrorListener extends BaseErrorListener {
	        @Override
	        public void syntaxError(Recognizer<?, ?> recognizer,
	                Object offendingSymbol, int line, int charPositionInLine,
	                String msg, RecognitionException e) {
	            throw new RuntimeException(msg);
	        }
	    }

	public ABCMusicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AbctuneContext extends ParserRuleContext {
		public AbcmusicContext abcmusic() {
			return getRuleContext(AbcmusicContext.class,0);
		}
		public AbcheaderContext abcheader() {
			return getRuleContext(AbcheaderContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ABCMusicParser.EOF, 0); }
		public AbctuneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abctune; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterAbctune(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitAbctune(this);
		}
	}

	public final AbctuneContext abctune() throws RecognitionException {
		AbctuneContext _localctx = new AbctuneContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_abctune);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); abcheader();
			setState(117); abcmusic();
			setState(118); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbcheaderContext extends ParserRuleContext {
		public OtherfieldsContext otherfields() {
			return getRuleContext(OtherfieldsContext.class,0);
		}
		public FieldkeyContext fieldkey() {
			return getRuleContext(FieldkeyContext.class,0);
		}
		public FieldtitleContext fieldtitle() {
			return getRuleContext(FieldtitleContext.class,0);
		}
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public FieldnumberContext fieldnumber() {
			return getRuleContext(FieldnumberContext.class,0);
		}
		public AbcheaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abcheader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterAbcheader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitAbcheader(this);
		}
	}

	public final AbcheaderContext abcheader() throws RecognitionException {
		AbcheaderContext _localctx = new AbcheaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_abcheader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if (_la==22 || _la==WHITESPACE || _la==LINEFEED) {
				{
				setState(120); endofline();
				}
			}

			setState(123); fieldnumber();
			setState(124); fieldtitle();
			setState(125); otherfields();
			setState(126); fieldkey();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherfieldsContext extends ParserRuleContext {
		public List<FieldvoiceContext> fieldvoice() {
			return getRuleContexts(FieldvoiceContext.class);
		}
		public FieldtempoContext fieldtempo(int i) {
			return getRuleContext(FieldtempoContext.class,i);
		}
		public FieldvoiceContext fieldvoice(int i) {
			return getRuleContext(FieldvoiceContext.class,i);
		}
		public FieldcomposerContext fieldcomposer(int i) {
			return getRuleContext(FieldcomposerContext.class,i);
		}
		public List<FieldmeterContext> fieldmeter() {
			return getRuleContexts(FieldmeterContext.class);
		}
		public FielddefaultlengthContext fielddefaultlength(int i) {
			return getRuleContext(FielddefaultlengthContext.class,i);
		}
		public FieldmeterContext fieldmeter(int i) {
			return getRuleContext(FieldmeterContext.class,i);
		}
		public List<FielddefaultlengthContext> fielddefaultlength() {
			return getRuleContexts(FielddefaultlengthContext.class);
		}
		public List<FieldtempoContext> fieldtempo() {
			return getRuleContexts(FieldtempoContext.class);
		}
		public List<FieldcomposerContext> fieldcomposer() {
			return getRuleContexts(FieldcomposerContext.class);
		}
		public OtherfieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherfields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterOtherfields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitOtherfields(this);
		}
	}

	public final OtherfieldsContext otherfields() throws RecognitionException {
		OtherfieldsContext _localctx = new OtherfieldsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_otherfields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 21)) & ~0x3f) == 0 && ((1L << (_la - 21)) & ((1L << (21 - 21)) | (1L << (43 - 21)) | (1L << (46 - 21)) | (1L << (61 - 21)) | (1L << (81 - 21)))) != 0)) {
				{
				setState(133);
				switch (_input.LA(1)) {
				case 46:
					{
					setState(128); fieldcomposer();
					}
					break;
				case 43:
					{
					setState(129); fielddefaultlength();
					}
					break;
				case 21:
					{
					setState(130); fieldmeter();
					}
					break;
				case 61:
					{
					setState(131); fieldtempo();
					}
					break;
				case 81:
					{
					setState(132); fieldvoice();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldnumberContext extends ParserRuleContext {
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public SpaceContext space() {
			return getRuleContext(SpaceContext.class,0);
		}
		public SongnumberContext songnumber() {
			return getRuleContext(SongnumberContext.class,0);
		}
		public FieldnumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldnumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterFieldnumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitFieldnumber(this);
		}
	}

	public final FieldnumberContext fieldnumber() throws RecognitionException {
		FieldnumberContext _localctx = new FieldnumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldnumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(29);
			setState(139); match(49);
			setState(141);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(140); space();
				}
			}

			setState(143); songnumber();
			setState(144); endofline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SongnumberContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public SongnumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_songnumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterSongnumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitSongnumber(this);
		}
	}

	public final SongnumberContext songnumber() throws RecognitionException {
		SongnumberContext _localctx = new SongnumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_songnumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldtitleContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public FieldtitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldtitle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterFieldtitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitFieldtitle(this);
		}
	}

	public final FieldtitleContext fieldtitle() throws RecognitionException {
		FieldtitleContext _localctx = new FieldtitleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fieldtitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(40);
			setState(149); match(49);
			setState(150); title();
			setState(151); endofline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitTitle(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldcomposerContext extends ParserRuleContext {
		public ComposerContext composer() {
			return getRuleContext(ComposerContext.class,0);
		}
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public FieldcomposerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldcomposer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterFieldcomposer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitFieldcomposer(this);
		}
	}

	public final FieldcomposerContext fieldcomposer() throws RecognitionException {
		FieldcomposerContext _localctx = new FieldcomposerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldcomposer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(46);
			setState(156); match(49);
			setState(157); composer();
			setState(158); endofline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComposerContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ComposerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterComposer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitComposer(this);
		}
	}

	public final ComposerContext composer() throws RecognitionException {
		ComposerContext _localctx = new ComposerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_composer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FielddefaultlengthContext extends ParserRuleContext {
		public DefaultlengthContext defaultlength() {
			return getRuleContext(DefaultlengthContext.class,0);
		}
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public SpaceContext space() {
			return getRuleContext(SpaceContext.class,0);
		}
		public FielddefaultlengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fielddefaultlength; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterFielddefaultlength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitFielddefaultlength(this);
		}
	}

	public final FielddefaultlengthContext fielddefaultlength() throws RecognitionException {
		FielddefaultlengthContext _localctx = new FielddefaultlengthContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fielddefaultlength);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); match(43);
			setState(163); match(49);
			setState(165);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(164); space();
				}
			}

			setState(167); defaultlength();
			setState(168); endofline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefaultlengthContext extends ParserRuleContext {
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public DefaultlengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultlength; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterDefaultlength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitDefaultlength(this);
		}
	}

	public final DefaultlengthContext defaultlength() throws RecognitionException {
		DefaultlengthContext _localctx = new DefaultlengthContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defaultlength);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); number();
			setState(172);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(171); space();
				}
			}

			setState(174); match(83);
			setState(176);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(175); space();
				}
			}

			setState(178); number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldmeterContext extends ParserRuleContext {
		public MeterContext meter() {
			return getRuleContext(MeterContext.class,0);
		}
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public SpaceContext space() {
			return getRuleContext(SpaceContext.class,0);
		}
		public FieldmeterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldmeter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterFieldmeter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitFieldmeter(this);
		}
	}

	public final FieldmeterContext fieldmeter() throws RecognitionException {
		FieldmeterContext _localctx = new FieldmeterContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fieldmeter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180); match(21);
			setState(181); match(49);
			setState(183);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(182); space();
				}
			}

			setState(185); meter();
			setState(186); endofline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MeterContext extends ParserRuleContext {
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public MeterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterMeter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitMeter(this);
		}
	}

	public final MeterContext meter() throws RecognitionException {
		MeterContext _localctx = new MeterContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_meter);
		int _la;
		try {
			setState(202);
			switch (_input.LA(1)) {
			case 46:
				enterOuterAlt(_localctx, 1);
				{
				setState(188); match(46);
				setState(190);
				_la = _input.LA(1);
				if (_la==39) {
					{
					setState(189); match(39);
					}
				}

				}
				break;
			case 5:
			case 12:
			case 20:
			case 26:
			case 33:
			case 38:
			case 56:
			case 59:
			case 66:
			case 79:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(192); number();
				setState(194);
				_la = _input.LA(1);
				if (_la==WHITESPACE) {
					{
					setState(193); space();
					}
				}

				setState(196); match(83);
				setState(198);
				_la = _input.LA(1);
				if (_la==WHITESPACE) {
					{
					setState(197); space();
					}
				}

				setState(200); number();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldtempoContext extends ParserRuleContext {
		public EndoflineContext endofline() {
			return getRuleContext(EndoflineContext.class,0);
		}
		public TempoContext tempo() {
			return getRuleContext(TempoContext.class,0);
		}
		public SpaceContext space() {
			return getRuleContext(SpaceContext.class,0);
		}
		public FieldtempoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldtempo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).enterFieldtempo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABCMusicListener ) ((ABCMusicListener)listener).exitFieldtempo(this);
		}
	}
